--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@
         color:#ffff;
         padding:12px 24px;
         background-color: #6366F1;
+        cursor: pointer;
         }
 
         .read-docs{
