--- a/style.css
+++ b/style.css
@@ -2,13 +2,16 @@
         padding:0;
         margin: 0;
         box-sizing: border-box;
+       
     }
      
      
-     body {
+     html,body {
             border-color:#e5e7eb;
             background-color: #0f172a;
-            padding:0 24px
+            padding:0 24px;
+            overflow-x: hidden;
+            width: 100%;
         }
 
 
